# audioability

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: nightly-release.yml
docs/: architecture.md  github-actions-ci.yml  linux-setup.md
scripts/: audioability-linux-runner.sh  build-linux-runner.sh  install-linux.sh  run-linux.sh
src/audioability/: __init__.py  __main__.py  cli.py
src/audioability/accessibility/: __init__.py  backends.py  filtering.py  models.py  navigation.py
src/audioability/core/: __init__.py  application.py
src/audioability/input/: __init__.py  commands.py  router.py
src/audioability/speech/: __init__.py  controller.py  drivers.py
tests/: test_accessibility_backends.py  test_accessibility_filtering.py  test_application.py  test_cli.py  test_command_router.py  test_commands.py  test_object_navigation.py  test_speech_controller.py
